chore(format): add Spotless + Checkstyle and fix formatting violations
  - Add Spotless/Checkstyle configuration and format task
  - Enforce formatting in check and CI
  - Replace star imports and normalize line endings to satisfy Checkstyle/Spotless